# ZIR-Compiler

./: .gitignore  CMakeLists.txt  README.md  argparser.h  ast.h  build.sh  ezprint.zen  factorial.zen  filehandler.h  irgenerator.cpp  irgenerator.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
13days/: day10.zen  day12.zen  day13.zen  day4.zen  day5.zen  day6.zen  day7.zen  day8.zen
examples/: print.zen
include/: AST.h  Analysis.h  AnalysisManager.h  AnalysisManagerProxy.h  AnalysisPass.h  ArgParser.h  ArgumentException.h  FileHandler.h  InternalException.h  Lexer.h  Parser.h  ParserException.h  Pass.h  PassAdaptor.h  PassManager.h
include/backend/: AsmPrinter.h  Backend.h  BackendPassBuilder.h  ByteWriter.h  MachineBasicBlock.h  MachineFunction.h  MachineFunctionPass.h  MachineInstruction.h  MachineModule.h  MachinePass.h  MachinePassManager.h  SymbolTable.h  SymbolTableAnalysis.h
include/backend/z80/: TIBuiltins.h  Z80AsmPrinter.h  Z80Backend.h  Z80ISel.h  Z80Instruction.h  Z80MemoryLocation.h  Z80Operand.h  Z80Register.h
include/ir/: BasicBlock.h  Function.h  IRGenerator.h  Instruction.h  Module.h  Value.h
ir/: basicblock.h  function.h  instruction.cpp  instruction.h  module.h  value.h
src/: Lexer.cpp  Main.cpp  Parser.cpp
src/backend/: AsmPrinter.cpp  MachineBasicBlock.cpp  SymbolTable.cpp
src/backend/z80/: TIBuiltins.cpp  Z80AsmPrinter.cpp  Z80Backend.cpp  Z80ISel.cpp  Z80Instruction.cpp  Z80Register.cpp
src/ir/: IRGenerator.cpp  Instruction.cpp
